[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ci-dashboard"
version = "0.1.2"
description = "CI dashboard jobs and API scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "google-cloud-storage>=2.18.0",
  "httpx>=0.27.0",
  "kafka-python-ng>=2.2.3",
  "PyMySQL>=1.1.0",
  "SQLAlchemy>=2.0.0",
  "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0",
]

[project.scripts]
ci-dashboard = "ci_dashboard.jobs.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
